adding more information to eacch section

--- a/BF-2_Quantify carbon storage.qmd
+++ b/BF-2_Quantify carbon storage.qmd
@@ -40,9 +40,11 @@ Carbon emissions can be assessed in a similar way. For example, maps of peatland
 
 Some Global and Canadian examples of model implementation.
 
++-----------------------+--------------------------------------------------------------------------------------------+------------+
 | Models/Approaches     | Have they been used?                                                                       | In Canada? |
-|-----------------------|--------------------------------------------------------------------------------------------|------------|
++=======================+============================================================================================+============+
 | Stratify and multiply | [Goetz et al. (2009)](https://cbmjournal.biomedcentral.com/articles/10.1186/1750-0680-4-2) |            |
++-----------------------+--------------------------------------------------------------------------------------------+------------+
 :::
 
 ::: {.callout-note collapse="true"}
@@ -56,9 +58,11 @@ Carbon stock maps can be differentiated to track changes over time. Another new 
 
 Some Global and Canadian examples of model implementation.
 
++-----------------------+--------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------+
 | Models/Approaches     | Have they been used?                                                                       | In Canada?                                                                                   |
-|-----------------------|--------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------|
++=======================+============================================================================================+==============================================================================================+
 | Direct remote sensing | [Goetz et al. (2009)](https://cbmjournal.biomedcentral.com/articles/10.1186/1750-0680-4-2) | [Sothe et al. (2021)](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2021GB007213) |
++-----------------------+--------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------+
 :::
 
 ::: {.callout-note collapse="true"}
@@ -115,6 +119,16 @@ Some Global and Canadian examples of model implementation.
 |                        |                                                                                                              |            |
 |                        | [Hastie et al. (2022)](https://eprints.whiterose.ac.uk/186536/1/Article_File_Accepted_version_Peru_Peat.pdf) |            |
 +------------------------+--------------------------------------------------------------------------------------------------------------+------------+
+|                        |                                                                                                              |            |
++------------------------+--------------------------------------------------------------------------------------------------------------+------------+
+
+## Process-based models
+
++------------------------------------------------------------------------------+--------------------------------------------------------------------------+-------------+
+| Models/Approaches                                                            | Have they been used?                                                     | In Canada?  |
++==============================================================================+==========================================================================+=============+
+| Evolution of peatland area and carbon dynamics from the Last Glacial Maximum | [Müller & Joos (2020)](https://bg.copernicus.org/articles/17/5285/2020/) |             |
++------------------------------------------------------------------------------+--------------------------------------------------------------------------+-------------+
 :::
 
 ## Tools
@@ -303,6 +317,8 @@ sdm_map #}
 ```
 
 ## Guidance for action
+
+In construction!
 
 There is a need to optimize monitoring/sampling in the region by identifying priority sites where data is needed to improve model performance and reduce uncertainty.
 
