--- a/BF-3_Permafrost.qmd
+++ b/BF-3_Permafrost.qmd
@@ -81,23 +81,27 @@ Some Global and Canadian examples of model implementation.
 
 Some Global and Canadian examples of model implementation.
 
-+-------------------+----------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+
-| Models/Approaches | Have they been used?                                                                               | In Canada?                                                                          |
-+===================+====================================================================================================+=====================================================================================+
-| Assessment        | [Schuur et al. (2013)](https://link.springer.com/article/10.1007/s10584-013-0730-7),               | [Fatolahzadeh & Maghoul (2024)](https://www.nature.com/articles/s43247-024-01317-7) |
-|                   |                                                                                                    |                                                                                     |
-|                   | [Chen et al. (2023)](https://esd.copernicus.org/articles/14/55/2023/),                             |                                                                                     |
-|                   |                                                                                                    |                                                                                     |
-|                   | [Steinert et al. (2023)](https://iopscience.iop.org/article/10.1088/1748-9326/ad10d7),             |                                                                                     |
-|                   |                                                                                                    |                                                                                     |
-|                   | [Burke et al. (2020)](https://tc.copernicus.org/articles/14/3155/2020/tc-14-3155-2020.html),       |                                                                                     |
-|                   |                                                                                                    |                                                                                     |
-|                   | [Teufel & Sushama (2019)](https://www.nature.com/articles/s41558-019-0614-6?fromPaywallRec=false), |                                                                                     |
-|                   |                                                                                                    |                                                                                     |
-|                   | [Turesky et al. (2020)](https://www.nature.com/articles/s41561-019-0526-0?fromPaywallRec=false),   |                                                                                     |
-|                   |                                                                                                    |                                                                                     |
-|                   | [Hu et al. (2022)](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2022EF002835)          |                                                                                     |
-+-------------------+----------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------+
++----------------------------------------------------------------------+----------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+
+| Models/Approaches                                                    | Have they been used?                                                                               | In Canada?                                                                                                                      |
++======================================================================+====================================================================================================+=================================================================================================================================+
+| Assessment                                                           | [Schuur et al. (2013)](https://link.springer.com/article/10.1007/s10584-013-0730-7),               | [Fatolahzadeh & Maghoul (2024)](https://www.nature.com/articles/s43247-024-01317-7)                                             |
+|                                                                      |                                                                                                    |                                                                                                                                 |
+|                                                                      | [Chen et al. (2023)](https://esd.copernicus.org/articles/14/55/2023/),                             |                                                                                                                                 |
+|                                                                      |                                                                                                    |                                                                                                                                 |
+|                                                                      | [Steinert et al. (2023)](https://iopscience.iop.org/article/10.1088/1748-9326/ad10d7),             |                                                                                                                                 |
+|                                                                      |                                                                                                    |                                                                                                                                 |
+|                                                                      | [Burke et al. (2020)](https://tc.copernicus.org/articles/14/3155/2020/tc-14-3155-2020.html),       |                                                                                                                                 |
+|                                                                      |                                                                                                    |                                                                                                                                 |
+|                                                                      | [Teufel & Sushama (2019)](https://www.nature.com/articles/s41558-019-0614-6?fromPaywallRec=false), |                                                                                                                                 |
+|                                                                      |                                                                                                    |                                                                                                                                 |
+|                                                                      | [Turesky et al. (2020)](https://www.nature.com/articles/s41561-019-0526-0?fromPaywallRec=false),   |                                                                                                                                 |
+|                                                                      |                                                                                                    |                                                                                                                                 |
+|                                                                      | [Hu et al. (2022)](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2022EF002835)          |                                                                                                                                 |
++----------------------------------------------------------------------+----------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+
+| Permafrost thawing and plant community dynamics/biomass distribution |                                                                                                    | [Errington et al. (2024)](https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/1365-2745.14339?campaign=wolearlyview)   |
+|                                                                      |                                                                                                    |                                                                                                                                 |
+|                                                                      |                                                                                                    | [Yun et al. (2024)](https://www.pnas.org/doi/10.1073/pnas.2314036121?utm_source=TOC&utm_medium=ealert&TOC_v121_i25=&ref=d38198) |
++----------------------------------------------------------------------+----------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+
 :::
 
 ## Tools
