--- a/BF-5_Wetlands.qmd
+++ b/BF-5_Wetlands.qmd
@@ -1,6 +1,6 @@
 ---
 title: "BF-5_Wetlands"
-ormat:
+format:
   html:
     self-contained: true
     link-external-icon: true
@@ -12,13 +12,155 @@ editor: visual
 ::: panel-tabset
 ## Introduction
 
+In construction!!
+
+The extent and dynamics of wetlands in a region should be also modelled and included in further assessments.
+
+For instance, the Wetland Area and Dynamics for Methane Modeling (WAD2M, [Zhang et al. 2021](https://essd.copernicus.org/articles/13/2001/2021/)), the Satellite-Derived Global Surface Water Extent and Dynamics (GIEMS-2, [Prigent et al. 2019](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2019JD030711)),  the TOPMODEL has been used to model spatiotemporal dynamics of global wetlands ([Zhang et al. 2016](https://bg.copernicus.org/articles/13/1387/2016/bg-13-1387-2016.pdf)), and the Dynamical Peatland Model Based on TOPMODEL (DYPTOP) in combination with  [LPX-Bern](https://www.climate.unibe.ch/research/research_groups/earth_system_modelling_biogeochemical_cycles/lpx/index_eng.html) DGVM are used to "benchmark the global-scale distribution, extent, and seasonality of inundation against satellite data" ([Stocker et al. 2014](https://gmd.copernicus.org/articles/7/3089/2014/gmd-7-3089-2014.pdf)).
+
+"Simulating the spatio-temporal dynamics of inundation is key to understanding the role of wetlands under past and future climate change" ([Stocker et al. 2014](https://gmd.copernicus.org/articles/7/3089/2014/gmd-7-3089-2014.pdf)). Wetlands can be modeled as single units or embedded in a watershed and/or instream model. [Mozafari et al. (2023)](https://www.sciencedirect.com/science/article/pii/S0048969723015061) provided a comprehensive review of process-based models and approaches to model wetlands dynamic, highlighting those with peatlands modules.
+
+Others have used open source and high resolution data, and convolutional networks models to map local wetlands at 1 meter spatial resolution ([Mainali et al. 2023](https://www.sciencedirect.com/science/article/pii/S0048969722077257)).
+
+Tracking global change in wetlands extent, assessment and conservation status have been implemented. For instance,  the Wetland Extent Trend index developed by [Dixon et al. (2016)](https://www.sciencedirect.com/science/article/abs/pii/S0006320715301476) (not well documented), the evaluation of wetland loss at coarse spatial resolution over the past three centuries shows that the HJBL is practically intact ([Fluet-Choiunard et al. 2023](https://www.nature.com/articles/s41586-022-05572-6.epdf?sharing_token=T_gy2x7t3BcIVNW7LADNItRgN0jAjWel9jnR3ZoTv0PbHROEZ7UgcrLuGBROGGb5myeKrDMguIKVy0wCrjzHBxfEZYpCWx4muajTIuHlInrwffm5Y023LgLLhvePPHgTCOO2B9Qt_6C6Gq-91rlsFFAjl4qkSzz2YwOV4FheYH0FW63SVw9p6WR9QByOu5gbRuEprF1v1f5FNTr2CfETzvYsWwXWLAi8Z08IzSCLvAol0HGRHE1BUmefqTpn_ZtQoi0q_g_65ajKmPNUivmU0ttKMaGL1aBnU9RNq2rr84kCG9wSXiv-0aAimeNCiYUx&tracking_referrer=www.theguardian.com)), and the current conservation status by [Reis et al. (2017)](https://academic.oup.com/bioscience/article/67/6/523/3859715?login=false) shows that most of the HJBL region is unprotected, except for some Ramsar sites and some protected areas.
+
 ## Models
+
+::: {.callout-note collapse="true"}
+## Wetland classification
+
+Remote sensing is an important tool for a variety of applications (see [Jafarzadeh et al. 2022](https://www.mdpi.com/2072-4292/14/23/6104)).
+
+**Assessment of Status**
+
+Some Global and Canadian examples of model implementation.
+
++------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Models/Approaches                                                                              | Have they been used?                                                                 | In Canada?                                                                                                                                                                                                |
++================================================================================================+======================================================================================+===========================================================================================================================================================================================================+
+| Machine Learning algorithms & [The Google Earth Engine](https://earthengine.google.com/) (GEE) | [Farda (2017)](https://iopscience.iop.org/article/10.1088/1755-1315/98/1/012042/pdf) | [Mahdianpari et al. (2018)](https://www.mdpi.com/2072-4292/11/1/43)                                                                                                                                       |
+|                                                                                                |                                                                                      |                                                                                                                                                                                                           |
+|                                                                                                | [Hird et al. (2017)](https://www.mdpi.com/2072-4292/9/12/1315)                       | [Mahdianpari et al. (2020)](https://www.tandfonline.com/doi/abs/10.1080/07038992.2019.1711366?casa_token=_pywAmeemjMAAAAA:R05pPgjlIX0r5_XpS5zh1fg9qqHQOerv9QJ8rKerXRWwZ6YdNRTAi1JarzvFbJICzCReUkn12P_BEw) |
+|                                                                                                |                                                                                      |                                                                                                                                                                                                           |
+|                                                                                                |                                                                                      | [Mahdianpari et al. (2020)](https://www.tandfonline.com/doi/abs/10.1080/07038992.2020.1802584?casa_token=4NFSCucT6IsAAAAA:kftwm1JY7lViuv1xtvXgrUixsgeH75BSrXDExSa7bQAnYyYD69jBUTRrghG-F1X58ogCjKSVm9lb8w) |
+|                                                                                                |                                                                                      |                                                                                                                                                                                                           |
+|                                                                                                |                                                                                      | [Amani et al. (2019)](https://www.tandfonline.com/doi/full/10.1080/20964471.2019.1690404)                                                                                                                 |
+|                                                                                                |                                                                                      |                                                                                                                                                                                                           |
+|                                                                                                |                                                                                      | [Amani et al. (2019](https://www.mdpi.com/2072-4292/11/7/842#B37-remotesensing-11-00842))                                                                                                                 |
+|                                                                                                |                                                                                      |                                                                                                                                                                                                           |
+|                                                                                                |                                                                                      | [Amani et al. (2021](https://ieeexplore.ieee.org/abstract/document/9254004))                                                                                                                              |
+|                                                                                                |                                                                                      |                                                                                                                                                                                                           |
+|                                                                                                |                                                                                      | [DeLancey et al. (2019)](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0218165)                                                                                                       |
+|                                                                                                |                                                                                      |                                                                                                                                                                                                           |
+|                                                                                                |                                                                                      | [DeLancey et al. (2019)](https://www.mdpi.com/2072-4292/12/1/2)                                                                                                                                           |
+|                                                                                                |                                                                                      |                                                                                                                                                                                                           |
+|                                                                                                |                                                                                      | [Valenti et al. (2020)](https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9205661)                                                                                                                     |
++------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+|                                                                                                |                                                                                      |                                                                                                                                                                                                           |
++------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+|                                                                                                |                                                                                      |                                                                                                                                                                                                           |
++------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+:::
+
+::: {.callout-note collapse="true"}
+## Wetland change detection
+
++-------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+
+| Models/Approaches | Have they been used?                                                                                                                                                                | In Canada? |
++===================+=====================================================================================================================================================================================+============+
+| Wetlands dynamics | [Muro et al. (2019)](https://ieeexplore.ieee.org/abstract/document/8675757?casa_token=KDJ-gfHmkOMAAAAA:1ZihGCegSot9Jb9m2z2lB5myhO-WeIfvZ4YyLRwXn-x02ZLeNbACRv7aqIP_FV-Ww868jIOblmk) |            |
+|                   |                                                                                                                                                                                     |            |
+|                   | [Shi et al. (2021)](https://www.mdpi.com/2072-4292/13/22/4514)                                                                                                                      |            |
++-------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+
+| Monitoring        | [Mahdianpari et al. (2020)](https://www.tandfonline.com/doi/full/10.1080/15481603.2020.1846948)                                                                                     |            |
+|                   |                                                                                                                                                                                     |            |
+|                   | [Zhu et al. (2021)](https://www.mdpi.com/2072-4292/13/11/2161https://www.mdpi.com/2072-4292/13/11/2161)                                                                             |            |
+|                   |                                                                                                                                                                                     |            |
+|                   | [Zhu et al. (2022)](https://www.sciencedirect.com/science/article/pii/S1470160X22003740)                                                                                            |            |
++-------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+
+:::
+
+::: {.callout-note collapse="true"}
+## Wetland vegetation mapping
+
++--------------------+----------------------------------------------------------------------------------------------+------------+
+| Models/Approaches  | Have they been used?                                                                         | In Canada? |
++====================+==============================================================================================+============+
+| Mapping vegetation | [Slagter et al. (2020)](https://www.sciencedirect.com/science/article/pii/S0303243419307573) |            |
+|                    |                                                                                              |            |
+|                    | [Wu et al. (2021)](https://www.mdpi.com/2072-4292/13/3/443)                                  |            |
++--------------------+----------------------------------------------------------------------------------------------+------------+
+:::
+
+::: {.callout-note collapse="true"}
+## Wetland biomass
+
++--------------------------------+-----------------------------------------------------------------------------------------------------+------------+
+| Models/Approaches              | Have they been used?                                                                                | In Canada? |
++================================+=====================================================================================================+============+
+| Marsh aboveground carbon stock | [Byrd et al. (2018)](https://www.sciencedirect.com/science/article/pii/S0924271618300844)           |            |
+|                                |                                                                                                     |            |
+|                                | [Campbell & Wang (2020)](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0229605) |            |
++--------------------------------+-----------------------------------------------------------------------------------------------------+------------+
+:::
+
+::: {.callout-note collapse="true"}
+## Wetlands dynamics
+
++------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+
+| Models/Approaches                                          | Have they been used?                                                                                                                                                                            | In Canada? |
++============================================================+=================================================================================================================================================================================================+============+
+| The Wetland Area and Dynamics for Methane Modeling (WAD2M) | [Zhang et al. (2021)](https://essd.copernicus.org/articles/13/2001/2021/)                                                                                                                       |            |
++------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+
+| Inundation analysis                                        | [Tang et al. (2016)](https://link.springer.com/article/10.1007/s10661-016-5664-x)                                                                                                               |            |
+|                                                            |                                                                                                                                                                                                 |            |
+|                                                            | [Wu et al. (2019)](https://www.sciencedirect.com/science/article/pii/S0034425719301609?casa_token=fJJW4xgVxkgAAAAA:rc6y-z2uc7HykfsxXZJPcyRbojkxn_8sMzJ2G8GxzhKZm0YwPbbeLr571Kluzkp_3tZA6aKzRtQ) |            |
+|                                                            |                                                                                                                                                                                                 |            |
+|                                                            | [Kool et al. (2022)](https://www.sciencedirect.com/science/article/pii/S0303243422000927)                                                                                                       |            |
++------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+
+:::
 
 ## Tools
 
++------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Purpose                                                                                                          | Tools                                                                             | Supporting                                                                                                                                                                                                                                                                                                                                             |
+|                                                                                                                  |                                                                                   |                                                                                                                                                                                                                                                                                                                                                        |
+|                                                                                                                  |                                                                                   | Organization                                                                                                                                                                                                                                                                                                                                           |
++==================================================================================================================+===================================================================================+========================================================================================================================================================================================================================================================================================================================================================+
+| Mapping wetlands                                                                                                 | [Canadian wetland inventory](https://maps.ducks.ca/cwi/)                          |                                                                                                                                                                                                                                                                                                                                                        |
++------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+|                                                                                                                  | [The Wetland Intrinsic Potential Tool (WIP)](https://zenodo.org/records/10019936) | [Halibinsky et al. (2022)](https://hess.copernicus.org/articles/27/3687/2023/)                                                                                                                                                                                                                                                                         |
++------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| It offers a toolbox for analysis and processing satellite imagery and for building models, maps and applications | [GlobWetland Africa](http://globwetland-africa.org/)                              | [GlobWetland Africa](http://globwetland-africa.org/?page_id=7) is a large Earth Observation application project funded by the European Space Agency (ESA) in partnership with the African Team of the Ramsar convention on wetlands                                                                                                                    |
++------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Practical tools and resources to better understand and conserve wetlands, Canada                                 | [Wetland Network](https://www.wetlandnetwork.ca/index.php)                        | WetlandNetwork is a project of the North American Wetlands Conservation Council (NAWCC) Canada, a government- non governmental partnership whose mission is to provide national leadership on wetlands, waterfowl and wetland dependent species conservation for Canadians through the North American Waterfowl Management Plan and other initiatives. |
++------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Status of Land cover and biodiversity in Alberta Canada (there is a section for wetlands)                        | [Online reporting for Biodiversity](https://orb.abmi.ca/areas/15)                 | [Alberta Biodiversity Monitoring Institute](https://maps.abmi.ca/#/?&aoi=15&dataset=34044,34042,34041,34046,34043,34045,&mask=15)                                                                                                                                                                                                                      |
++------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+
 ## Partners
+
+In construction!!
 
 ## Datasets
 
+In construction!!
+
++--------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-----------+
+| Description                                                                                | Repository and Layers                                                                                                                                                             | Extent,     | Reference |
+|                                                                                            |                                                                                                                                                                                   |             |           |
+|                                                                                            |                                                                                                                                                                                   | Format,     |           |
+|                                                                                            |                                                                                                                                                                                   |             |           |
+|                                                                                            |                                                                                                                                                                                   | Resolution, |           |
+|                                                                                            |                                                                                                                                                                                   |             |           |
+|                                                                                            |                                                                                                                                                                                   | Projection  |           |
++============================================================================================+===================================================================================================================================================================================+=============+===========+
+| Datasets (e.g., Global surface water explorer) and methodologies for wetlands delimitation | To do: review                                                                                                                                                                     |             |           |
+|                                                                                            |                                                                                                                                                                                   |             |           |
+|                                                                                            | [GEO WETLANDS](https://geowetlands.org/knowledge-base/) (see [PPT](https://www.ramsar.org/sites/default/files/documents/library/strp20_agenda_item_5_geo-wetlands_mpaganini.pdf)) |             |           |
++--------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-----------+
+
 ## Guidance for action
+
+In construction!!
 :::
