--- a/Approaches.qmd
+++ b/Approaches.qmd
@@ -9,6 +9,8 @@ toc: true
 editor: visual
 ---
 
+In construction!!!!!!
+
 ## 1. Introduction
 
 Biodiversity conservation and ecosystem services management requires the implementation of multiple approaches to achieve desired goals and targets. However, the integration of multiple models and multiple components from social, economic and biophysical system is a necessity to understand the complexity, interactions and feed backs.
@@ -280,7 +282,9 @@ Medium spatial resolution appropriate for national scale studies
 
 ### 2.2. Carbon storage, biodiversity and water
 
-Multicriteria models are used to prioritize the selection of sites for conservation. For example,[Jung et al. (2021)](https://www.nature.com/articles/s41559-021-01528-7) ranked terrestrial conservation priorities globally with a joint optimization that minimized the number of threatened species, maximized carbon retention and water quality regulation. They found that "selecting the top-ranked 30% and 50% of terrestrial land area would conserve respectively 60.7% and 85.3% of the estimated total carbon stock and 66% and 89.8% of all clean water, in addition to meeting conservation targets for 57.9% and 79% of all species considered" ([Jung et al. 2021](https://www.nature.com/articles/s41559-021-01528-7)). Similarly, [Martin et al. (2022)](https://www.nature.com/articles/s41598-022-15274-8#Tab1) used linear programming ([Beyer et al. 2016](https://www.sciencedirect.com/science/article/pii/S0304380016300217?casa_token=D7Sqeh4qr9EAAAAA:DKAAyTO5VFvFsMYGGY6lJXIQo6rbWHTWjlhCLk_POcXU9NexwN-d3XgZ6lvcH4zsiaETqMxBrz4)) to rank sites for dual protection (i.e., Caribou and carbon storage). [Conlisk et al. (2023)](https://www.pointblue.org/wp-content/uploads/2023/03/Conlisk-et-al.-2023-Evidence-for-the-Multiple-Benefits-of-Wetland-Conservation-in-North-America-1.pdf) also show potential benefits of wetland conservation in North America, including: water supply regulation, flood risk mitigation, water quality, biodiversity support, carbon storage, among others.More about water provision or a separate heading?
+Multicriteria models are used to prioritize the selection of sites for conservation. For example, [Jung et al. (2021)](https://www.nature.com/articles/s41559-021-01528-7) ranked terrestrial conservation priorities globally with a joint optimization that minimized the number of threatened species, maximized carbon retention and water quality regulation. They found that "selecting the top-ranked 30% and 50% of terrestrial land area would conserve respectively 60.7% and 85.3% of the estimated total carbon stock and 66% and 89.8% of all clean water, in addition to meeting conservation targets for 57.9% and 79% of all species considered" ([Jung et al. 2021](https://www.nature.com/articles/s41559-021-01528-7)). Similarly, [Martin et al. (2022)](https://www.nature.com/articles/s41598-022-15274-8#Tab1) used linear programming ([Beyer et al. 2016](https://www.sciencedirect.com/science/article/pii/S0304380016300217?casa_token=D7Sqeh4qr9EAAAAA:DKAAyTO5VFvFsMYGGY6lJXIQo6rbWHTWjlhCLk_POcXU9NexwN-d3XgZ6lvcH4zsiaETqMxBrz4)) to rank sites for dual protection (i.e., Caribou and carbon storage). [Conlisk et al. (2023)](https://www.pointblue.org/wp-content/uploads/2023/03/Conlisk-et-al.-2023-Evidence-for-the-Multiple-Benefits-of-Wetland-Conservation-in-North-America-1.pdf) also show potential benefits of wetland conservation in North America, including: water supply regulation, flood risk mitigation, water quality, biodiversity support, carbon storage, among others.More about water provision or a separate heading?
+
+For water balance the WaterWorld model is available ([Mulligan 2013](https://iwaponline.com/hr/article/44/5/748/1145/WaterWorld-a-self-parameterising-physically-based) included in the [Co\$tingNature tool](https://www.policysupport.org/waterworld)), able to produce hydrological baselines and can be used to apply multiple scenarios of climate change and evaluate policy options for management interventions.
 
 ### **2.3. Climate change refugia and biodiversity in carbon-rich areas**
 
@@ -387,7 +391,7 @@ They tested "the direct and indirect effects of regional temperature, snow condi
 ::: panel-tabset
 ## Ecosystem services tools
 
-Ecosystem services tools such as [InVEST](https://naturalcapitalproject.stanford.edu/software/invest)™, [ARIES](https://aries.integratedmodelling.org/), and [Co\$tingNature](https://www.policysupport.org/costingnature) are available to quantify trade-offs among multiple ecosystem services (in particular for carbon storage-soil pools). These tools can integrate complex interactions and beneficiaries ([Thierry et al. 2021](https://www.facetsjournal.com/doi/10.1139/facets-2020-0116)) under various scenarios (e.g., climate change, land cover change, urban growth, management interventions, etc.; see for instance: [Brown et al. 2015](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0122721)).
+Ecosystem services tools such as [InVEST](https://naturalcapitalproject.stanford.edu/software/invest)™, [ARIES](https://aries.integratedmodelling.org/), and [Co\$tingNature](https://www.policysupport.org/costingnature) are available to quantify trade-offs among multiple ecosystem services (in particular for carbon storage-soil pools). These tools can integrate complex interactions and beneficiaries ([Thierry et al. 2021](https://www.facetsjournal.com/doi/10.1139/facets-2020-0116)) under various scenarios (e.g., climate change, land cover change, urban growth, management interventions, etc.; see for instance: [Brown et al. 2015](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0122721) and [Nelson et al. 2009](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1890/080023)).
 
 ::: {.callout-tip collapse="true"}
 ## InVEST tool
@@ -554,16 +558,97 @@ Ecological modelers have also developed some IAMs to accommodate and evaluate qu
 
 [Glick et al. (2024)](https://www.biorxiv.org/content/biorxiv/early/2024/05/03/2024.05.01.589041.full.pdf?%3Fcollection=)
 
+[Boakes et al. (2024)](https://www.nature.com/articles/s41467-024-49999-z?utm_source=ncomms_etoc&utm_medium=email&utm_campaign=toc_41467_15_1_20240710&utm_content=EAES_1)
+
+[Davis et al. (2020)](https://www.nature.com/articles/s41561-020-0592-3?fromPaywallRec=false)
+
 ## 7. Impacts on Biodiversity and Ecosystem services
 
-## 8. Spatial prioritzation
+## 8. Spatial prioritization
 
-## 9. Early warnings
+Multiple approaches exist to prioritize terrestrial, marine and freshwater areas, that best represent one (e.g., protect as many species as possible, e.g., [Ceballos & Ehrlich 2006](https://www.pnas.org/doi/10.1073/pnas.0609334103#:~:text=Species%20richness%20was%20defined%20as,species%20in%20a%20single%20cell.)) or multiple facets of biodiversity (e.g., [Brum et al. 2017](https://www.pnas.org/doi/10.1073/pnas.1706461114)). These approaches are usually developed to achieve global conservation targets (e.g., conserve at least 30% of land by 2030; [Dinerstein et al., 2019](https://www.science.org/doi/10.1126/sciadv.aaw2869); [Belote et al. 2021](https://www.sciencedirect.com/science/article/pii/S0006320721004304#:~:text=Protecting%20biodiversity%20requires%20consideration%20of,richness%20alone%20represent%20alpha%20diversity.), [Carroll & Noss 2021](https://conbio.onlinelibrary.wiley.com/doi/full/10.1111/cobi.13869)) from regional (e.g., [Mallory & Boyce 2019](https://onlinelibrary.wiley.com/doi/full/10.1002/ece3.4915)) to national (e.g., [Belote et al. 2021](https://www.sciencedirect.com/science/article/pii/S0006320721004304)) and global scales (e.g., [Strassburg et al. 2020](https://www.nature.com/articles/s41586-020-2784-9)), depending on the conservation scope and data availability.
+
+In Canada, spatial prioritization has been used for biodiversity conservation for multiple biodiversity facets and also to address multiple environmental threats. Some of them have been implemented and have formal institutional support. For instance:
+
+-   Indigenous Protected and Conserved Areas (IPACs; [Shwan-Fletcher et al. 2021](https://www.pnas.org/doi/10.1073/pnas.2022218118), [Tran et al. 2019](https://www.sciencedirect.com/science/article/abs/pii/S0006320719308456), [Garnett et al. 2018](https://www.researchgate.net/publication/326424629_A_spatial_overview_of_the_global_importance_of_Indigenous_lands_for_conservation), [Moola & Roth 2018](https://cdnsciencepub.com/doi/full/10.1139/er-2018-0091)).
+
+-   [Important Birds Areas (IBAs)](https://www.ibacanada.ca/mapviewer.jsp?lang=EN).
+
+-   [Key Biodiversity Areas (KBAs)](https://kbacanada.org/): from species to ecosystems.
+
+-   Other Effective area-based Conservation Measures (see [Canada](https://www.canada.ca/en/environment-climate-change/services/nature-legacy/other-effective-area-based-measures.html)) .
+
+-   Critical Ecosystem Areas (operational methodology proposed by [Venegas et al. 2023](https://www.biorxiv.org/content/10.1101/2023.05.03.539215v1)).
+
+-   Endemic species for conservation ([Kraus et al. 2022](https://conbio.onlinelibrary.wiley.com/doi/full/10.1111/csp2.12845)).
+
+-   Species at risk:
+
+    -   [Pan-Candian approach 2023](https://www.canada.ca/en/services/environment/wildlife-plants-species/species-risk/pan-canadian-approach.html#fn1)
+
+    -   [SARA-COSEWIC](https://www.canada.ca/en/environment-climate-change/services/species-risk-public-registry/cosewic-assessments-status-reports.html),\*\*
+
+    -   [aquatic species at risk](https://www.dfo-mpo.gc.ca/species-especes/sara-lep/map-carte/index-eng.html)\*\*
+
+    -   [Critical Habitat for Species at Risk National Dataset - Canada](https://open.canada.ca/data/en/dataset/47caa405-be2b-4e9e-8f53-c478ade2ca74), [visualize it here](https://livingatlas-dcdev.opendata.arcgis.com/maps/003958a7206c41e1bfca3cb1d578058f/explore?location=47.541586%2C-81.299582%2C6.00))
+
+    -   [Woodland Caribou, Boreal population (Rangifer tarandus caribou)](https://www.canada.ca/en/environment-climate-change/services/species-risk-public-registry/recovery-strategies/woodland-caribou-boreal-2020.html) ECCC
+
+-   Ecological restoration ([Currie et al. 2023](https://conbio.onlinelibrary.wiley.com/doi/10.1111/csp2.12924)).
+
+-   Forest change, forest extent, drives, and fire alerts ([Canada- Global Forest Watch](https://www.globalforestwatch.org/dashboards/country/CAN/?category=undefined)).
+
+-   Carbon storage ([Harris et al. 2021](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/fee.2437)).
+
+-   [Canada watersheds reports](https://watershedreports.wwf.ca/?_ga=2.233906460.360523553.1693417788-577954010.1692312458#canada/by/threat-overall/profile).
+
+-   Wetlands: ([ECCC 2016](https://www.canada.ca/en/environment-climate-change/services/environmental-indicators/extent-wetlands.html); [Ontario](https://geohub.lio.gov.on.ca/datasets/mnrf::wetlands/explore?location=48.212505%2C-84.498000%2C4.84), [Wulder et al. 2018](https://www.mdpi.com/2072-4292/10/10/1623#)).
+
+-   Peatlands ([WCS](https://storymaps.arcgis.com/stories/19d24f59487b46f6a011dba140eddbe7)).
+
+-   Free-flowing rivers ([Grill et al. 2019](https://www.nature.com/articles/s41586-019-1111-9); for Canada see this, [WWF](https://wwf.ca/habitat/freshwater/free-flowing-rivers/)).
+
+<!-- -->
+
+-   AI and Biodiversity ([GPAI 2022](https://gpai.ai/projects/responsible-ai/environment/biodiversity-and-AI-opportunities-recommendations-for-action.pdf), [AI for Good](https://aiforgood.itu.int/new-ai-for-biodiversity-series-how-can-we-use-ai-to-monitor-biodiversity-and-support-conservation-actions/)) .
+
+-   [World Economic Forum](https://www.weforum.org/agenda/2023/05/ai-technology-international-biodiversity-day/), [LIFECLEF](https://link.springer.com/chapter/10.1007/978-3-031-42448-9_27), [Thompson 2023](https://www.nature.com/articles/d41586-023-03328-4#:~:text=As%20well%20as%20monitoring%20biodiversity,has%20led%20to%20biodiversity%20loss.)).
+
+Biodiversity, climate mitigation, and human communities ([Bateman et al. 2023](https://www.biorxiv.org/content/biorxiv/early/2023/03/27/2023.03.24.534176.full.pdf?%3Fcollection=)).
+
+::: {.callout-caution collapse="true"}
+## A topic for further discussion: analytical products from spatial prioritization
+
+Notes from Simo Ferrier:
+
+It's critically important to distinguish between two quite different types of analytical products here: 1) mapping of the relative priority of spatial units for implementation of a given action, to help inform decisions made within a highly messy, incremental decision-making process requiring consideration of lots of other ever-changing, context-specific scale-dependent values, factors and constraints which can't be effectively defined and quantified up-front; and 2) mapping of a discrete subset of spatial units selected to meet a set of targets, as efficiently and effectively as possible, through some form of optimisation or pseudo-optimisation. These two products play quite different roles in assessment and planning  - a difference discussed in [Ferrier & Drielsma (2010)](https://onlinelibrary.wiley.com/doi/full/10.1111/j.1472-4642.2010.00657.x). Mapping of relative priorities allows flexibility in incremental decision-making processes, by providing information on the potential value of all units in a region. This flexibility is largely lost in mapping of discrete areas proposed or selected for action. A given spatial unit is either included or excluded from the areas selected. Yet, because these selected areas together represent just one of many possible solutions which could have achieved a similar biodiversity outcome for the region, the potential contribution that an excluded unit could actually make to achieving this outcome is hidden from view. It is tempting to interpret the different colours on a Zonation map as conveying relative levels of priority for action. But these colours instead represent the order in which spatial units have been selected to generate a single optimal solution for the region and set of targets concerned -- i.e. they represent nested subsets of this single solution. This would be appropriate if the relevant planning process will allow this solution to be implemented in a highly top-down deterministic manner, but far less appropriate for processes that operate in a messier incremental manner, and therefore require greater flexibility, and greater consideration of other values and factors, in decision-making. 
+:::
+
+## 9. Multi-criteria optimization techniques
+
+Multi-objective land-use optimization/allocation ([Kaim et al. 2018](https://www.sciencedirect.com/science/article/abs/pii/S1364815217309970), [Strauch et al. 2019](https://www.sciencedirect.com/science/article/abs/pii/S1364815218311204)) are metaheuristic search algorithms that can be combined with statistical and/or simulation models (e.g., hydrological, biodiversity, or socio-economic models) to efficiently explore a large number of land-use configurations with respect to their potential to minimize trade-offs among multiple, and often competing, objectives.
+
+"One way to address biodiversity loss is to integrate ESS into systematic conservation planning (Faith, 2015) and re-allocate land uses in order to support the multifunctionality of landscapes. Sustainable land use allocation therefore seeks to take into account the current and future provision of ESS and biodiversity in order to determine so-called 'optimal' land use allocations. In general, land use allocation (also sometimes referred to as land use planning (Stewart et al., 2004)) is a type of resource allocation and can be defined as the process of allocating different activities or uses (e.g., agriculture, residential land, recreational activities, conservation) to particular areal units within a region (Cao et al., 2012)" ([Kaim et al 2018](https://d1wqtxts1xzle7.cloudfront.net/56291512/Kaim_etal_2018envsoft-libre.pdf?1523427310=&response-content-disposition=inline%3B+filename%3DA_review_of_multi_criteria_optimization.pdf&Expires=1721418779&Signature=SOCMpzx0abpduIZfCHVWpoCde6Z3KUv50wO~lraXeByUD-w-d3MzNYJn13lPWPMsjEqYhd0eWLPG6UHD9QjDi-vSosJpH6T8TpxZBotkUEij1KaD~PMXxIoY8tmIoMhMZHt-PmjT4XBPSINrz6IrooNW7q21oX8obmy~CW4fOrLDI1YWsGMjcwcLunbI88dZtLBt98M0pWFYi1E0R0WmRAskjecbRdNT47DjCZ4iauj5qsub2WOOSsZoq0uYQM9qXvCKqWprwkRV~LpkHMJU40n0lWAcoHGspnuIzemVC5aHmgYRJuTXgoZLcUmeomNfPg4t1CES-r28ciO2vZ-VYg__&Key-Pair-Id=APKAJLOHF5GGSLRBV4ZA)).
+
+See [Bartkowski et al. (2020)](https://www.frontiersin.org/journals/environmental-science/articles/10.3389/fenvs.2020.00103/full#B55) for Aligning Agent-Based Modeling With Multi-Objective Land-Use Allocation .
+
+## 10. Artificial Intelligence
+
+\
+Biodiversity and ecosystem services monitoring through Artificial Intelligence (AI, including Machine Learning which is a subset of AI) is an emerging and promising field to monitor biodiversity and inform conservation actions ([GPAI 2022](https://gpai.ai/projects/responsible-ai/environment/biodiversity-and-AI-opportunities-recommendations-for-action.pdf), [AI for Good](https://aiforgood.itu.int/new-ai-for-biodiversity-series-how-can-we-use-ai-to-monitor-biodiversity-and-support-conservation-actions/), [World Economic Forum](https://www.weforum.org/agenda/2023/05/ai-technology-international-biodiversity-day/),). AI enables the analysis of vast amounts of data, providing evidence of trends and patterns in a complex and evolving world.
+
+> Artificial intelligence (AI) is a wide-ranging branch of computer technologies concerned with building smart machines capable of augmenting, automating, and accelerating key day-to-day tasks that typically require human intelligence. It involves extracting patterns, predicting "future states", and detecting anomalies. ([Shivaprakash et al. 2022](https://www.mdpi.com/2071-1050/14/12/7154))
+
+AI models have been also used for the identification and prediction of biota ([Joly et al. 2023](https://link.springer.com/chapter/10.1007/978-3-031-42448-9_27), [Thompson 2023](https://www.nature.com/articles/d41586-023-03328-4#:~:text=As%20well%20as%20monitoring%20biodiversity,has%20led%20to%20biodiversity%20loss.)).  The [LifeCLEF virtual lab](https://www.imageclef.org/LifeCLEF) promotes advances in this domain. Also, integrating ML, remote sensing and biodiversity observation could feed in near-real time into an early warning system for biodiversity ([Antonelli et al. 2022](https://nph.onlinelibrary.wiley.com/doi/10.1002/ppp3.10337)). 
+
+For ecosystem services assessments "[ARIES](https://aries.integratedmodelling.org/) is an artificial intelligent modeler rather than a single model or collection of models. ARIES chooses ecological process models where appropriate, and turns to simpler models where process models do not exist or are inadequate. Based on a simple user query, ARIES builds all the agents involved in the nature/society interaction, connects them into a flow network, and creates the best possible models for each agent and connection. The result is a detailed, adaptive, and dynamic assessment of  how nature provides benefits to people." ([ARIES](https://aries.integratedmodelling.org/), see [Villa et al. 2014](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0091001) for methods).
+
+## 11. Early warnings
 
 [Tabor & Holland (2020)](https://zslpublications.onlinelibrary.wiley.com/doi/full/10.1002/rse2.163),
 
 [van Stokkom et al (2020)](https://www.fig.net/resources/proceedings/fig_proceedings/fig2021/papers/ts08.2/TS08.2_van_stokkom_dallinga_et_al_10885.pdf)
 
-## 10. Restoration
+## 12. Restoration
 
 Boreal Ecosystem Recovery and Assessment ([BERA](http://beraproject.org/bera-tools))
